--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ jinja2==3.1.4
 python-dotenv==1.0.0
 tzdata
 convertdate
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.10
 pandas>=2.0.0
 openpyxl>=3.1.0
 
