feat: Implement user authentication, add a base template, and introduce a statistics page.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ psycopg2-binary>=2.9.10
 pandas>=2.0.0
 openpyxl>=3.1.0
 
+# Authentication
+passlib>=1.7.4
+bcrypt>=4.0.0
+
 # Testing dependencies (optional)
 pytest==8.3.2
 pytest-cov==5.0.0
