feat: Enhance apartment type tracking and payment codes management. Added functionality to retrieve apartment type change dates, introduced a new payment code for professional support, and updated templates to display these changes in reports and summaries.

--- a/services/gesher_config.ini
+++ b/services/gesher_config.ini
@@ -24,8 +24,9 @@
 # חופשה (100%)
 376 = vacation_minutes, hours_100
 
-# נסיעות ותוספות (סכום ישיר)
+# נסיעות, תומך מקצועי ותוספות (סכום ישיר)
 370 = travel, money
+243 = professional_support, money
 371 = extras, money
 
 [FORMAT]
